--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>systemT</title>
     <script src="main.js"></script>
     <script src="tape.js"></script>
+    <script src="renderer.js"></script>
 
     <link rel=  "stylesheet" type="text/css" href="main.css" >
 </head>
@@ -15,5 +16,6 @@
 
     <textarea id="main_input"></textarea>
     <button onclick = "readInput()">Submit</button>
+    <button onclick = "step()">Step</button>
 </body>
 
