add save loading

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="main.js"></script>
     <script src="tape.js"></script>
     <script src="renderer.js"></script>
+    <script src="userInput.js"></script>
 
     <link rel=  "stylesheet" type="text/css" href="main.css" >
 </head>
@@ -17,5 +18,7 @@
     <textarea id="main_input"></textarea>
     <button onclick = "readInput()">Submit</button>
     <button onclick = "step()">Step</button>
+    <button onclick = "save()">Save</button>
+    <button onclick = "load()">Load</button>
 </body>
 
