--- a/index.html
+++ b/index.html
@@ -12,13 +12,22 @@
 </head>
 
 <body>
+<div class = "content">
     <div id = "tape">
     </div>
 
+    <br>
+    <div style="display: block">
     <textarea id="main_input"></textarea>
+    </div>
+    <br>
     <button onclick = "readInput()">Submit</button>
     <button onclick = "step()">Step</button>
+    <button onclick = "run()">Run</button>
+    <br>
+    <br>
     <button onclick = "save()">Save</button>
     <button onclick = "load()">Load</button>
+</div>
 </body>
 
