--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="tape.js"></script>
     <script src="renderer.js"></script>
     <script src="userInput.js"></script>
+    <script src="levelLoader.js"></script>
 
     <link rel=  "stylesheet" type="text/css" href="main.css" >
 </head>
