level loading & man page

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
     <br>
     <button onclick = "save()">Save</button>
     <button onclick = "load()">Load</button>
+    <div id="levels">
+
+    </div>
 </div>
 </body>
 
