--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>systemT</title>
-    <script src="main.js"></script>
-    <script src="tape.js"></script>
-    <script src="renderer.js"></script>
-    <script src="userInput.js"></script>
-    <script src="levelLoader.js"></script>
+    <script src="src/main.js"></script>
+    <script src="src/tape.js"></script>
+    <script src="src/renderer.js"></script>
+    <script src="src/userInput.js"></script>
+    <script src="srclevelLoader.js"></script>
 
     <link rel=  "stylesheet" type="text/css" href="main.css" >
 </head>
