minor input fixes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="src/tape.js"></script>
     <script src="src/renderer.js"></script>
     <script src="src/userInput.js"></script>
-    <script src="srclevelLoader.js"></script>
+    <script src="src/levelLoader.js"></script>
 
     <link rel=  "stylesheet" type="text/css" href="main.css" >
 </head>
