add basic tests

--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
     <div id = "tape">
     </div>
 
-    <br>
+    <p style="font-size: 30px;">&#9650;</p>
+
     <div style="display: block">
-    <textarea id="main_input"></textarea>
+        <textarea id="main_input" cols="15" rows="10"></textarea>
     </div>
+
     <br>
     <button onclick = "readInput()">Submit</button>
     <button onclick = "step()">Step</button>
