--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
     <script src="src/userInput.js"></script>
     <script src="src/levelLoader.js"></script>
 
+    <!-- FSS -->
+    <script src="src/FSS/src/canvas.js"></script>
+    <script src="src/FSS/src/renderer.js"></script>
+    <script src="src/FSS/src/lib/graph.js"></script>
+    <script src="src/FSS/src/input.js"></script>
+    <script src="src/FSS/src/lib/geometry.js"></script>
+
     <link rel=  "stylesheet" type="text/css" href="main.css" >
+    <link rel=  "stylesheet" type="text/css" href="src/FSS/main.css" >
 </head>
 
 <body>
@@ -19,7 +27,11 @@
 
     <p id="cursor" style="font-size: 30px;">&#9650;</p>
 
-    <div id="overlay" style="display: block">
+    <canvas id="canvas">
+        You're browser does not support HTML5 canvas
+    </canvas>
+
+   <!--  <div id="overlay" style="display: block">
         <textarea spellcheck = false
                   class="scanlines" 
                   id="main_input" 
@@ -40,7 +52,23 @@
 
     </div>
 
-    <p id="line"></p>
+    <p id="line"></p> -->
 </div>
+
+
+<!-- menu for new arrows -->
+<div id="arrow_menu" class="arrow_menu">
+    <input id="if_" type="text" name="">
+    <input id="out" type="text" name="">
+</div>
+
+<div id="saves">
+    <span id="save0">
+        <button onclick="save()">Save</button>
+        <button onclick="load()" id="loadbtn">Load</button>
+        <button onclick="resetSim()" id="resetbtn">Reset</button>
+    </span>
+</div>
+
 </body>
 
