load canvas correctly

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <script src="src/FSS/src/lib/graph.js"></script>
     <script src="src/FSS/src/input.js"></script>
     <script src="src/FSS/src/lib/geometry.js"></script>
+    <script src="src/FSS/src/elements.js"></script>
+    <script src="src/FSS/src/simulate.js"></script>
 
     <link rel=  "stylesheet" type="text/css" href="main.css" >
     <link rel=  "stylesheet" type="text/css" href="src/FSS/main.css" >
@@ -28,7 +30,7 @@
     <p id="cursor" style="font-size: 30px;">&#9650;</p>
 
     <canvas id="canvas">
-        You're browser does not support HTML5 canvas
+        Your browser does not support HTML5 canvas
     </canvas>
 
    <!--  <div id="overlay" style="display: block">
