--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 </div>
 
 <div class="content">
-    <button id="stp_btn">Step</button>
+    <button id="step_btn">Step</button>
     <button id="submit_btn" style="display: none;"></button>
 </div>
 
