connect tape with arrow direction

--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
         </canvas>
     </div>
 
+
+    <div id="levels" style="display: block;">
+        <button id="toggle-levels">Close</button>
+    </div>
+
    <!--  <div id="overlay" style="display: block">
         <textarea spellcheck = false
                   class="scanlines" 
@@ -69,6 +74,7 @@
 
 <div class="content">
     <button id="step_btn">Step</button>
+    <button id="save-game">Save</button>
     <button id="submit_btn" style="display: none;"></button>
 </div>
 
@@ -79,6 +85,13 @@
     L<input id="dir-left" type="radio" name="dir">
     R<input id="dir-right" type="radio" name="dir">
 </div>
+
+<hr>
+
+<div class="content">
+    <button id="levels-btn">Levels</button>
+</div>
+
 
 <div id="saves" style="display: none;">
     <span id="save0">
